ex3/testdata/typechecker/error/Minus.java
class BinopTest {
	public static void main(String[] a){
            boolean b;
            b = - 1; // TE
	}
}

